--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,20 @@
 </head>
 <body>
 
+	<div id="user_nav">
+		<% if current_user %>
+			Logged in as <%= current_user.email %>
+			<%= link_to "Log Out", log_out_path %>
+		<% else %>
+			<%= link_to "Sign Up", sign_up_path %>
+			<%= link_to "Log In", log_in_path %>
+		<% end %>
+	</div>
+
+	<% flash.each do |name, message| %>
+		<%= content_tag :div, message, :id => "flash_#{name}" %> 
+	<% end %> 
+
 <%= yield %>
 
 </body>
